Добавит секцию about

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       <section class="top">
         <div class="container top__inner">
           <div class="top__content">
-            <h3 class="top__title">Создайте атмосферу уюта и гармонии!</h3>
+            <h3 class="title top__title">
+              Создайте атмосферу уюта и гармонии!
+            </h3>
             <p class="top__text">
               Создайте особую атмосферу в своем доме с нашей экологически чистой
               и качественной продукцией из 100% натурального соевого воска.
@@ -70,6 +72,52 @@
               <img class="top__img-l" src="images/top-l.png" alt="" />
             </picture>
           </div>
+        </div>
+      </section>
+
+      <section class="about">
+        <div class="container about__inner">
+          <div class="about__content">
+            <h2 class="title about__title">О нас</h2>
+            <p class="about__text">
+              Богдан создатель бренда который всегда заинтересован в
+              изготовлении разнообразных вещей на дому. Он регулярно
+              экспериментировал с разными материалами и инструментами,
+              попробовав свои силы во многих отраслях, включая изготовление
+              свечей.
+            </p>
+            <p class="about__text">
+              Соевый воск изготавливается из соевых бобов, выращиваемых в Дании,
+              и этот вид воска является экологически чистым и безопасным для
+              здоровья.
+            </p>
+          </div>
+          <ul class="about__list">
+            <li class="about__item">
+              <img
+                src="images/about-1.jpg"
+                alt=""
+                class="about__item-img about__item-img--1"
+              />
+              <p class="about__item-text">Наслаждайтесь моментом</p>
+            </li>
+            <li class="about__item">
+              <img
+                src="images/about-2.png"
+                alt=""
+                class="about__item-img about__item-img--2"
+              />
+              <p class="about__item-text">Создайте любимую атмосферу</p>
+            </li>
+            <li class="about__item">
+              <img
+                src="images/about-3.jpg"
+                alt=""
+                class="about__item-img about__item-img--3"
+              />
+              <p class="about__item-text">Изготовлены с любовью</p>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
