Добавит секцию steps

--- a/index.html
+++ b/index.html
@@ -136,6 +136,127 @@
           </div>
         </div>
       </section>
+
+      <section class="section steps">
+        <div class="container section__inner">
+          <div class="steps__descr section__descr">
+            <h2 class="steps__title title">Этапы создания свечей</h2>
+            <p class="steps__text section__text">
+              Создание свечи из соевого воска может состоять из следующих
+              этапов:
+            </p>
+          </div>
+          <ol class="steps__list section__content-descr section--decor">
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль
+                для свечи, ароматизаторы, красители и другие дополнительные
+                материалы.
+              </p>
+              <img class="steps__item-img" src="images/step-1.jpg" />
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка формы: выбор формы для свечи и подготовка ее к
+                наполнению воском.
+              </p>
+              <img class="steps__item-img" src="images/step-2.jpg" />
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/step-3.jpg" />
+              <p class="steps__item-text">
+                Приготовление воска: расплавление соевого воска в плавильном
+                устройстве до нужной температуры. Добавление ароматизаторов и
+                красителей при необходимости.
+              </p>
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/step-4.jpg" />
+              <p class="steps__item-text">
+                Подготовка фитиля: вставка фитиля в форму и фиксирование его
+                так, чтобы он был равномерно напряжен.
+              </p>
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль
+                для свечи, ароматизаторы, красители и другие дополнительные
+                материалы.
+              </p>
+              <img class="steps__item-img" src="images/step-5.jpg" />
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Наполнение формы: воск налить в форму, пока она не заполнится
+                полностью. Ждать, пока он затвердеет.
+              </p>
+              <img class="steps__item-img" src="images/step-6.jpg" />
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/step-7.jpg" />
+              <p class="steps__item-text">
+                Приготовление воска: расплавление соевого воска в плавильном
+                устройстве до нужной температуры. Добавление ароматизаторов и
+                красителей при необходимости.
+              </p>
+            </li>
+            <li class="steps__item steps__item--even">
+              <img class="steps__item-img" src="images/step-8.jpg" />
+              <p class="steps__item-text">
+                Подготовка фитиля: вставка фитиля в форму и фиксирование его
+                так, чтобы он был равномерно напряжен.
+              </p>
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Подготовка материалов: мелкие фрагменты соевого воска, фитиль
+                для свечи, ароматизаторы, красители и другие дополнительные
+                материалы.
+              </p>
+              <img class="steps__item-img" src="images/step-9.jpg" />
+            </li>
+            <li class="steps__item steps__item--odd">
+              <p class="steps__item-text">
+                Наполнение формы: воск налить в форму, пока она не заполнится
+                полностью. Ждать, пока он затвердеет.
+              </p>
+              <img class="steps__item-img" src="images/step-10.jpg" />
+            </li>
+          </ol>
+        </div>
+      </section>
+
+      <section class="section courses">
+        <div class="container section__inner">
+          <div class="goods__descr section__descr">
+            <h2 class="goods__title title">Наши курсы</h2>
+            <p class="goods__text section__text">
+              Наши курсы позволяют сделать первый шаг в новой карьере или
+              углубить свои знания в своей области, развиваться как
+              профессионал, а также улучшить качество своей жизни.
+            </p>
+          </div>
+          <div class="goods__content section__content-descr section--decor">
+            <div class="goods__item">
+              <img src="images/course-1.jpg" alt="" class="goods__item-img" />
+              <h4 class="goods__item-title">Основы изготовления свечей</h4>
+              <p class="goods__item-text">
+                Будем обучать основам изготовления свечей из разных материалов.
+              </p>
+              <button class="button">Купить курс</button>
+            </div>
+            <div class="goods__item">
+              <img src="images/course-2.jpg" alt="" class="goods__item-img" />
+              <h4 class="goods__item-title">Искусство ароматерапии</h4>
+              <p class="goods__item-text">
+                Будем изучать искусство ароматерапии и изготовление свечей с
+                разными ароматами.
+              </p>
+              <button class="button">Купить курс</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
