Добавит секцию courses

--- a/index.html
+++ b/index.html
@@ -236,17 +236,37 @@
               профессионал, а также улучшить качество своей жизни.
             </p>
           </div>
-          <div class="goods__content section__content-descr section--decor">
-            <div class="goods__item">
-              <img src="images/course-1.jpg" alt="" class="goods__item-img" />
+          <div
+            class="goods__content section__content-descr section--decor courses__content"
+          >
+            <div class="goods__item courses__item">
+              <div class="courses__item-img">
+                <img
+                  src="images/course-1.jpg"
+                  alt=""
+                  class="goods__item-img course__item-img"
+                />
+                <p class="courses__title">Основы изготовления свечей</p>
+                <p class="courses__time">Обучение<span> - 20 час</span></p>
+                <p class="courses__price">Цена - 40$</p>
+              </div>
               <h4 class="goods__item-title">Основы изготовления свечей</h4>
               <p class="goods__item-text">
                 Будем обучать основам изготовления свечей из разных материалов.
               </p>
               <button class="button">Купить курс</button>
             </div>
-            <div class="goods__item">
-              <img src="images/course-2.jpg" alt="" class="goods__item-img" />
+            <div class="goods__item courses__item">
+              <div class="courses__item-img">
+                <img
+                  src="images/course-2.jpg"
+                  alt=""
+                  class="goods__item-img course__item-img"
+                />
+                <p class="courses__title">Искусство ароматерапии</p>
+                <p class="courses__time">Обучение<span> - 20 час</span></p>
+                <p class="courses__price">Цена - 40$</p>
+              </div>
               <h4 class="goods__item-title">Искусство ароматерапии</h4>
               <p class="goods__item-text">
                 Будем изучать искусство ароматерапии и изготовление свечей с
