Добавит секцию team

--- a/index.html
+++ b/index.html
@@ -277,6 +277,94 @@
           </div>
         </div>
       </section>
+
+      <section class="team section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="title team__title">Наши преподаватели</h2>
+            <p class="section__text">
+              Эти люди работают вместе, чтобы создать курсы для вас, которые
+              помогут вам начать собственный бизнес или хобби.
+            </p>
+          </div>
+          <div class="team__content section__content-descr">
+            <div class="team__item">
+              <img src="images/team-1.jpg" alt="" class="team__img" />
+              <div class="team__item-box">
+                <p class="team__item-name">Преподаватель Богдан</p>
+                <p class="team__item-descr">
+                  Имеет опыт преподавания и работы 4 года
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img src="images/team-2.jpg" alt="" class="team__img" />
+              <div class="team__item-box">
+                <p class="team__item-name">Преподаватель Анна</p>
+                <p class="team__item-descr">
+                  Имеет опыт преподавания и работы 6 лет
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img src="images/team-3.jpg" alt="" class="team__img" />
+              <div class="team__item-box">
+                <p class="team__item-name">Преподаватель Галина</p>
+                <p class="team__item-descr">
+                  Обучает сфере дизайна и декорирования
+                </p>
+              </div>
+            </div>
+            <div class="team__item">
+              <img src="images/team-4.jpg" alt="" class="team__img" />
+              <div class="team__item-box">
+                <p class="team__item-name">Маркетолог Ольга</p>
+                <p class="team__item-descr">Поможет вам с рекламой</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="feedback section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="title">Отзывы от клиентов</h2>
+            <p class="section__text">
+              Наши покупатели имеют разный возраст, статус, занятия и интересы,
+              но у них есть одна общая черта – они стремятся к гармонии и
+              обретают радость в маленьких радостях жизни, которые создают
+              атмосферу уюта и гармонии в их доме.
+            </p>
+          </div>
+          <div
+            class="feedback__content section__content-descr section--decor"
+          ></div>
+        </div>
+      </section>
+
+      <section class="certificates section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="title">Сертификаты качества</h2>
+            <p class="section__text">
+              Сертификаты обеспечивают доверие и уверенность для наших клиентов.
+            </p>
+          </div>
+          <div
+            class="certificates__content section__content-descr section--decor"
+          ></div>
+        </div>
+      </section>
+
+      <section class="questions section">
+        <div class="container section__inner">
+          <div class="section__descr">
+            <h2 class="title">Часто задаваемые вопросы</h2>
+          </div>
+          <div class="questions__content section__content-descr"></div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
