Добавит оставшиеся секции

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -327,8 +331,8 @@
       </section>
 
       <section class="feedback section">
-        <div class="container section__inner">
-          <div class="section__descr">
+        <div class="container feedback__inner section__inner">
+          <div class="feedback__descr section__descr">
             <h2 class="title">Отзывы от клиентов</h2>
             <p class="section__text">
               Наши покупатели имеют разный возраст, статус, занятия и интересы,
@@ -337,23 +341,167 @@
               атмосферу уюта и гармонии в их доме.
             </p>
           </div>
-          <div
-            class="feedback__content section__content-descr section--decor"
-          ></div>
+          <div class="feedback__content section--decor">
+            <div class="feedback__slider">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img
+                        src="images/slide.jpg"
+                        alt=""
+                        class="feedback__item-img"
+                      />
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a href="" class="feedback__item-sociallink">
+                        <img src="images/instagram.svg" alt="" />
+                      </a>
+                      <p class="feedback__item-name">Иван Пилипенко</p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого
+                        Валентина для моей девушки и она была просто невероятна!
+                        Запах был очень приятным и романтичным, а форма сердечка
+                        была совершенной для этого праздника. Моя девушка была
+                        очень довольна подарком, и я точно закажу еще свечей с
+                        этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">
+                        Купить этот товар
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img
+                        src="images/slide.jpg"
+                        alt=""
+                        class="feedback__item-img"
+                      />
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a href="" class="feedback__item-sociallink">
+                        <img src="images/instagram.svg" alt="" />
+                      </a>
+                      <p class="feedback__item-name">Иван Пилипенко</p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого
+                        Валентина для моей девушки и она была просто невероятна!
+                        Запах был очень приятным и романтичным, а форма сердечка
+                        была совершенной для этого праздника. Моя девушка была
+                        очень довольна подарком, и я точно закажу еще свечей с
+                        этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">
+                        Купить этот товар
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img
+                        src="images/slide.jpg"
+                        alt=""
+                        class="feedback__item-img"
+                      />
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a href="" class="feedback__item-sociallink">
+                        <img src="images/instagram.svg" alt="" />
+                      </a>
+                      <p class="feedback__item-name">Иван Пилипенко</p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого
+                        Валентина для моей девушки и она была просто невероятна!
+                        Запах был очень приятным и романтичным, а форма сердечка
+                        была совершенной для этого праздника. Моя девушка была
+                        очень довольна подарком, и я точно закажу еще свечей с
+                        этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">
+                        Купить этот товар
+                      </button>
+                    </div>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <div class="feedback__item">
+                    <div class="feedback__item-video">
+                      <img
+                        src="images/slide.jpg"
+                        alt=""
+                        class="feedback__item-img"
+                      />
+                      <button class="feedback__item-videobtn">
+                        <img src="images/btn.png" alt="" />
+                      </button>
+                    </div>
+                    <div class="feedback__item-content">
+                      <a href="" class="feedback__item-sociallink">
+                        <img src="images/instagram.svg" alt="" />
+                      </a>
+                      <p class="feedback__item-name">Иван Пилипенко</p>
+                      <p class="feedback__item-text">
+                        Я заказал свечу в форме сердечка в День Святого
+                        Валентина для моей девушки и она была просто невероятна!
+                        Запах был очень приятным и романтичным, а форма сердечка
+                        была совершенной для этого праздника. Моя девушка была
+                        очень довольна подарком, и я точно закажу еще свечей с
+                        этого сайта!"
+                      </p>
+                      <button class="button feedback__item-btn">
+                        Купить этот товар
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
         </div>
       </section>
 
       <section class="certificates section">
         <div class="container section__inner">
-          <div class="section__descr">
+          <div class="certificates__descr section__descr">
             <h2 class="title">Сертификаты качества</h2>
             <p class="section__text">
               Сертификаты обеспечивают доверие и уверенность для наших клиентов.
             </p>
           </div>
-          <div
-            class="certificates__content section__content-descr section--decor"
-          ></div>
+          <div class="certificates__content section--decor">
+            <div class="certificates__slider">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="images/cert-1.jpg" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/cert-2.jpg" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/cert-1.jpg" alt="" />
+                </div>
+                <div class="swiper-slide">
+                  <img src="images/cert-2.jpg" alt="" />
+                </div>
+              </div>
+              <div class="swiper-pagination"></div>
+            </div>
+          </div>
         </div>
       </section>
 
@@ -362,7 +510,58 @@
           <div class="section__descr">
             <h2 class="title">Часто задаваемые вопросы</h2>
           </div>
-          <div class="questions__content section__content-descr"></div>
+          <div class="questions__content">
+            <div class="accordion">
+              <div class="accordion__item">
+                <button class="accordion__title">
+                  Какие запахи доступны для свечей?
+                </button>
+                <div class="accordion__text">
+                  <ol>
+                    <li>
+                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о
+                      домашнем уюте.
+                    </li>
+                    <li>
+                      Лаванда – приятный, успокаивающий и релаксирующий запах,
+                      помогающий снять стресс и напряжение.
+                    </li>
+                    <li>
+                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат,
+                      который помогает поднять настроение и взбодрить.
+                    </li>
+                    <li>
+                      Кедр – древесный, земной и масленный аромат, придающий
+                      ощущение стабильности и надежности.
+                    </li>
+                    <li>
+                      Яблоко и корица – теплый и уютный аромат, напоминающий о
+                      зимних праздниках и домашних условиях.
+                    </li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="promo">
+        <div class="container promo__inner">
+          <p class="promo__text">Покупайте больше, экономьте больше</p>
+          <a href="" class="promo__link">В каталог</a>
+        </div>
+      </section>
+
+      <section class="contacts">
+        <div class="container contacts__inner">
+          <form action="" class="form">
+            <p class="form__title">Подпишись на наши акции</p>
+            <input type="text" class="form__input" placeholder="Имя" />
+            <input type="email" class="form__input" placeholder="E-mail" />
+            <button class="form__btn" type="submit">Подписаться</button>
+          </form>
+          <img src="images/contacts.jpg" alt="" class="contacts__img" />
         </div>
       </section>
     </main>
@@ -451,6 +650,7 @@
       </div>
     </template>
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="js/main.js" type="module"></script>
   </body>
 </html>
