--- a/index.html
+++ b/index.html
@@ -517,28 +517,118 @@
                   Какие запахи доступны для свечей?
                 </button>
                 <div class="accordion__text">
-                  <ol>
-                    <li>
-                      Ваниль – теплый, сладкий и уютный аромат, напоминающий о
-                      домашнем уюте.
-                    </li>
-                    <li>
-                      Лаванда – приятный, успокаивающий и релаксирующий запах,
-                      помогающий снять стресс и напряжение.
-                    </li>
-                    <li>
-                      Розовый грейпфрут – свежий, фруктовый и энергичный аромат,
-                      который помогает поднять настроение и взбодрить.
-                    </li>
-                    <li>
-                      Кедр – древесный, земной и масленный аромат, придающий
-                      ощущение стабильности и надежности.
-                    </li>
-                    <li>
-                      Яблоко и корица – теплый и уютный аромат, напоминающий о
-                      зимних праздниках и домашних условиях.
-                    </li>
-                  </ol>
+                  <div class="accordion__text-inner">
+                    <ol>
+                      <li>
+                        Ваниль – теплый, сладкий и уютный аромат, напоминающий о
+                        домашнем уюте.
+                      </li>
+                      <li>
+                        Лаванда – приятный, успокаивающий и релаксирующий запах,
+                        помогающий снять стресс и напряжение.
+                      </li>
+                      <li>
+                        Розовый грейпфрут – свежий, фруктовый и энергичный
+                        аромат, который помогает поднять настроение и взбодрить.
+                      </li>
+                      <li>
+                        Кедр – древесный, земной и масленный аромат, придающий
+                        ощущение стабильности и надежности.
+                      </li>
+                      <li>
+                        Яблоко и корица – теплый и уютный аромат, напоминающий о
+                        зимних праздниках и домашних условиях.
+                      </li>
+                    </ol>
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">Как долго горят свечи?</button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Animi, veritatis voluptatum obcaecati officiis fugiat
+                    quisquam laborum eligendi, quam temporibus dolore
+                    reprehenderit fuga recusandae deleniti? Sint qui aperiam sed
+                    tempora aspernatur.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">
+                  Можно ли сделать заказ на индивидуальный дизайн свечи?
+                </button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                    Dolores, ipsam impedit non voluptatibus unde eligendi modi
+                    doloribus quas earum, dolorem quam eos minus, rerum ut quod
+                    sunt! Esse, omnis amet?
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">
+                  Какие варианты доставки?
+                </button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Necessitatibus temporibus assumenda id quam exercitationem
+                    enim dignissimos. Quibusdam accusantium amet non rerum,
+                    culpa ea earum iste magnam, exercitationem adipisci modi
+                    similique.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">Как оплачивать заказ?</button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Facere corrupti expedita ab sunt mollitia odit? Quod, dolor
+                    quae, sint incidunt dolorum cupiditate earum mollitia sunt
+                    temporibus saepe sapiente obcaecati assumenda!
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">Как долго длится курс?</button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                    Quasi necessitatibus iste sit omnis ipsum officia
+                    praesentium. Quas expedita et ex, ducimus commodi iste
+                    voluptate corrupti, nesciunt possimus eius sequi rerum?
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">
+                  Какая стоимость за курс?
+                </button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Quia alias possimus, accusantium quisquam delectus totam
+                    quis doloremque odio adipisci quae, recusandae quos
+                    praesentium voluptates magnam? Obcaecati, non. Nam,
+                    accusantium obcaecati?
+                  </div>
+                </div>
+              </div>
+              <div class="accordion__item">
+                <button class="accordion__title">
+                  Имеется ли сертификат на курс?
+                </button>
+                <div class="accordion__text">
+                  <div class="accordion__text-inner">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Possimus dolore voluptate, suscipit perferendis labore a
+                    eum, molestiae quos ipsam est sit numquam. Nobis mollitia
+                    optio aliquid voluptatibus nesciunt tenetur dolore.
+                  </div>
                 </div>
               </div>
             </div>
